add state and city on candidate
