# src/server.ts
@@ -10,6 +10,8 @@ import promiseRoutes from './routes/promises';
 import electionRoutes from './routes/elections';
 import officeRoutes from './routes/offices';
 import politicalPartyRoutes from './routes/political-parties';
+import stateRoutes from './routes/states';
+import cityRoutes from './routes/cities';
 
 dotenv.config();
 
@@ -36,6 +38,8 @@ app.use('/api/v1/promises', promiseRoutes);
 app.use('/api/v1/elections', electionRoutes);
 app.use('/api/v1/offices', officeRoutes);
 app.use('/api/v1/political-parties', politicalPartyRoutes);
+app.use('/api/v1/states', stateRoutes);
+app.use('/api/v1/cities', cityRoutes);
 
 app.listen(port, () => {
   console.log(`Servidor da API de Promessas rodando na porta ${port}`);
